<resources>
    <string name="app_name">Music</string>
    <string name="version">Version</string>
    <string name="about">ABOUT</string>
    <string name="hometown">HOMETOWN</string>
    <string name="born">BORN</string>
    <string name="genre">GENRE</string>
    <string name="links">LINKS</string>
    <string name="from">FROM</string>
    <string name="formed">FORMED</string>
    <string name="artist_will_be_added_soon">This artist will be added soon!</string>
    <string name="album_will_be_added_soon">This album will be added soon!</string>
    <string name="not_for_children">This song not for children!</string>
    <string name="song_will_be_added_soon">This song will be added soon!</string>
    <string name="show">More</string>
    <string name="hide">Hide</string>
    <string name="albums">Albums ></string>
    <string name="latest_release">Latest Release ></string>
    <string name="top_songs">Top Songs ></string>
    <string name="singles"><![CDATA[Singles & EPs >]]></string>
    <string name="appears_on">Appears On ></string>
    <string name="compilations">Compilations ></string>
    <string name="albums_1">Albums</string>
    <string name="latest_release_1">Latest Release</string>
    <string name="top_songs_1">Top Songs</string>
    <string name="singles_1"><![CDATA[Singles & EPs]]></string>
    <string name="appears_on_1">Appears On</string>
    <string name="compilations_1">Compilations</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="set_theme">Set Theme</string>
    <string name="restrictions">Restrictions</string>
    <string name="explicit_hint">Allow 🅴 Explicit Content</string>
    <string name="system_default">System Default</string>
    <string name="en">English</string>
    <string name="ru">Russian</string>
    <string name="de">German</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="update">A new version is available!</string>
    <string name="current_version">"Current Version: "</string>
    <string name="latest_version">"Latest Version: "</string>
    <string name="check_button">Check</string>
    <string name="live">Live Albums ></string>
    <string name="live_1">Live Albums</string>
    <string name="other_versions"><![CDATA[Other Versions >]]></string>
    <string name="other_versions_1">Other Versions</string>
    <string name="more_by">More By </string>
    <string name="featured_artists"><![CDATA[Featured Artists >]]></string>
    <string name="featured_artists_1">Featured Artists</string>
    <string name="later_button">Later</string>
    <string name="update_button">Update</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="enter_code">Enter code</string>
    <string name="phone_number">Phone number</string>
    <string name="Login_hint">To log in to the application, you will be sent an SMS message to the specified phone number</string>
    <string name="continue_">Continue</string>
    <string name="preview">Preview mode</string>
    <string name="save">Save</string>
    <string name="description">Enter description</string>
    <string name="nickname">Your nickname</string>
    <string name="surname">Your surname</string>
    <string name="name">Your name</string>
    <string name="info_about">To continue, fill in the information about yourself</string>
    <string name="edit">Edit mode</string>
    <string name="written_by">"Written By: "</string>
    <string name="phone_number_short">The phone number is too short!</string>
    <string name="verify_code_short">Verify code is too short!</string>
    <string name="animated_art">Animated Art</string>
    <string name="high_quality">High Quality</string>
    <string name="profile">Profile</string>
    <string name="internet_lost">No Internet Connection!</string>
    <string name="battery" >Set by Battery Default</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="go_to_artists">Go to artists</string>
    <string name="go_to_album">Go to album</string>
    <string name="show_lyrics">Show lyrics</string>
    <string name="track_details">Track details</string>
    <string name="single">Single</string>
    <string name="ep" translatable="false">EP</string>
    <string name="confirm_short">Confirm the action</string>
    <string name="confirm_long">Confirm you want to enable explicit content</string>
    <string name="performing_artists">Performing Artists</string>
    <string name="composition_lyrics"><![CDATA[Composition & Lyrics]]></string>
    <string name="production_engineering"><![CDATA[Production & Engineering]]></string>
    <string name="no_pin">No PIN, pattern, or password set. Unable to change settings</string>
    <string name="canceled">Authentication canceled by user. Unable to change settings</string>
    <string name="sec1">" second"</string>
    <string name="sec2">" seconds"</string>
    <string name="sec3">" seconds"</string>
    <string name="sec4">" seconds"</string>
    <string name="min1">" minute"</string>
    <string name="min2">" minutes"</string>
    <string name="min3">" minutes"</string>
    <string name="min4">" minutes"</string>
    <string name="hour1">" hour"</string>
    <string name="hour2">" hours"</string>
    <string name="hour3">" hours"</string>
    <string name="hour4">" hours"</string>
    <string name="Jan">January</string>
    <string name="Feb">February</string>
    <string name="Mar">March</string>
    <string name="Apr">April</string>
    <string name="May">May</string>
    <string name="Jun">June</string>
    <string name="Jul">July</string>
    <string name="Aug">August</string>
    <string name="Sep">September</string>
    <string name="Oct">October</string>
    <string name="Nov">November</string>
    <string name="Dec">December</string>
    <string name="retry">Retry</string>
    <string name="restored">Connection restored</string>
    <string name="expname_hint">Display 🅴 song titles</string>
    <string name="app_release">Build from</string>
    <string name="version_code" translatable="false">2.3</string>
    <string name="app_release_date">June 7, 2024</string>
    <string name="copyright" translatable="false">© 2018-2024 kTH-Studio</string>
    <string name="build">Build №</string>
    <string name="player">Media Player</string>
    <string name="site" translatable="false">https://kth-studio.github.io/</string>
    <string name="test">Test Features</string>
    <string name="palette" translatable="false">Show palette colors under images</string>
    <string name="quality" translatable="false">Show quality of image</string>
    <string name="song1">" song"</string>
    <string name="song2">" songs"</string>
    <string name="song3">" songs"</string>
    <string name="song4">" songs"</string>
    <string name="build_code" translatable="false">1404</string>
    <string name="additional" >The Music app contains information that is not suitable for all ages</string>
    <string name="additional2">The Music app collects data from open sources, Apple Music, Spotify, Yandex Music and Genius</string>
    <string name="link_json" translatable="false">/link.json</string>
    <string name="image_jpg" translatable="false">/image.jpg</string>
    <string name="privacy">Privacy Policy</string>
    <string name="agreement">License Agreement</string>
    <string name="beta">Beta Version</string>
</resources>