<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:background="@color/inverse"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <include layout="@layout/collapsing_toolbar"/>
    <androidx.core.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ProfileActivity"
        tools:showIn="@layout/profile">
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/hint_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text1"
                android:text="@string/info_about"
                android:textSize="18sp"
                android:gravity="center_horizontal|center_vertical"/>
            <EditText
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/name_field"
                android:hint="@string/name"
                android:textColorHint="@color/text2"
                android:textColor="@color/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <EditText
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/surname_field"
                android:hint="@string/surname"
                android:textColorHint="@color/text2"
                android:textColor="@color/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <EditText
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/nickname_field"
                android:hint="@string/nickname"
                android:textColorHint="@color/text2"
                android:textColor="@color/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <EditText
                android:id="@+id/description_field"
                android:hint="@string/description"
                android:textColorHint="@color/text2"
                android:textColor="@color/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <LinearLayout
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/text1"/>
                <Button
                    android:id="@+id/preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preview"
                    android:textColor="@color/text1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>