<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:background="@color/inverse"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:outlineSpotShadowColor="@color/inverse"
        android:outlineAmbientShadowColor="@color/inverse"
        android:id="@+id/app_bar"
        android:background="@color/inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/Theme.Music.AppBarOverlay">
        <include layout="@layout/toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/settings_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/test_features"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/beta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/test"
                android:textSize="20sp"
                android:textColor="@color/text2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/test_colors"
                        android:textSize="18sp"
                        android:text="@string/palette"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/test_quality"
                        android:textSize="18sp"
                        android:text="@string/quality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/segment_7"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:padding="8dp"
                    android:background="@color/text4"
                    android:orientation="horizontal"/>
            </LinearLayout>
            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/language"
                android:textSize="20sp"
                android:textColor="@color/text2"/>
                <TextView
                    android:alpha="0.5"
                    android:id="@+id/language_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/system_default"
                    android:textSize="18sp"
                    android:textColor="@color/text1"/>
                <TextView
                    android:alpha="0.5"
                    android:id="@+id/language_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/system_default"
                    android:textSize="16sp"
                    android:textColor="@color/text1"/>
            <LinearLayout
                android:id="@+id/segment_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:padding="8dp"
                android:background="@color/text4"
                android:orientation="horizontal"/>
            <TextView
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/theme"
                android:textSize="20sp"
                android:textColor="@color/text2"/>
            <LinearLayout
                android:id="@+id/theme_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/theme_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/set_theme"
                    android:textSize="18sp"
                    android:textColor="@color/text1"/>
                <TextView
                    android:id="@+id/theme_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/system_default"
                    android:textSize="16sp"
                    android:textColor="@color/text1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/segment_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:padding="8dp"
                android:background="@color/text4"
                android:orientation="horizontal"/>
            <TextView
                android:id="@+id/restrictions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/restrictions"
                android:textSize="20sp"
                android:textColor="@color/text2"/>
            <LinearLayout
                android:id="@+id/explicit_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/explicit_switch"
                    android:textSize="18sp"
                    android:text="@string/explicit_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/name_switch"
                    android:textSize="18sp"
                    android:text="@string/expname_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/segment_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:padding="8dp"
                android:background="@color/text4"
                android:orientation="horizontal"/>
            <TextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="Display Options"
                android:textSize="20sp"
                android:textColor="@color/text2"/>
            <LinearLayout
                android:id="@+id/display_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/display_switch"
                    android:textSize="18sp"
                    android:text="@string/animated_art"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/quality_switch"
                    android:textSize="18sp"
                    android:text="@string/high_quality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:padding="8dp"
                android:background="@color/text4"
                android:orientation="horizontal"/>
            <TextView
                android:id="@+id/textview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/text2"/>
            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/version"
                    android:textSize="18sp"
                    android:textColor="@color/text1"/>
                <TextView
                    android:id="@+id/version1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/version_code"
                    android:textSize="16sp"
                    android:textColor="@color/text2"/>
                <TextView
                    android:id="@+id/build"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/build"
                    android:textSize="18sp"
                    android:textColor="@color/text1"/>
                <TextView
                    android:id="@+id/build1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/build_code"
                    android:textSize="16sp"
                    android:textColor="@color/text2"/>
                <TextView
                    android:id="@+id/release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/app_release"
                    android:textSize="18sp"
                    android:textColor="@color/text1"/>
                <TextView
                    android:id="@+id/release1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/app_release_date"
                    android:textSize="16sp"
                    android:textColor="@color/text2"/>
                <LinearLayout
                    android:id="@+id/segment_4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:padding="8dp"
                    android:background="@color/text4"
                    android:orientation="horizontal"/>
                <TextView
                    android:id="@+id/additional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/additional"
                    android:textSize="16sp"
                    android:textColor="@color/text1"/>
                <TextView
                    android:id="@+id/additional2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/additional2"
                    android:textSize="16sp"
                    android:textColor="@color/text1"/>
                <LinearLayout
                    android:id="@+id/segment"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:padding="8dp"
                    android:background="@color/text4"
                    android:orientation="horizontal"/>
                <Button
                    android:gravity="center"
                    android:id="@+id/privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_margin="0dp"
                    android:text="@string/privacy"
                    android:textSize="16sp"
                    android:textColor="@color/text1" />
                <Button
                    android:gravity="center"
                    android:id="@+id/agreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_margin="0dp"
                    android:text="@string/agreement"
                    android:textSize="16sp"
                    android:textColor="@color/text1"/>
                <LinearLayout
                    android:id="@+id/segment1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:padding="8dp"
                    android:background="@color/text4"
                    android:orientation="horizontal"/>
                <TextView
                    android:id="@+id/copyright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingBottom="8dp"
                    android:text="@string/copyright"
                    android:textSize="16sp"
                    android:textColor="@color/text1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/segment_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:padding="8dp"
                android:background="@color/text4"
                android:orientation="horizontal"/>
            <LinearLayout
                android:id="@+id/segment_6"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="horizontal"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>