<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/theme"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp"
                android:textSize="22sp"
                android:textColor="@color/text1"/>
            <Button
                android:id="@+id/system"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/system_default"
                android:textColor="@color/text1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <Button
                android:id="@+id/battery"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/battery"
                android:textColor="@color/text1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <Button
                android:id="@+id/light"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/light"
                android:textColor="@color/text1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <Button
                android:id="@+id/dark"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/dark"
                android:textColor="@color/text1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>